# Amino.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  collect.sh  run.sh  test.cpp
Amino/: Client.cpp  Client.h  EventHandler.cpp  EventHandler.h  Socket.cpp  Socket.h  SubClient.cpp  SubClient.h
Amino/objects/: EventTypes.cpp  Types.h  constants.h  exceptions.h  req_data.h
Amino/objects/ResponseObjects/: FanClubList.h  MediaObject.h  UserProfile.cpp  UserProfile.h
Amino/objects/args/: EventTypes.h  Gender.h  all.h
Amino/utils/: helpers.cpp  helpers.h  requester.cpp  requester.h
docs/: exceptions.md  main.md
examples/: link_info.cpp  login.cpp  upload_media_file.cpp  ws_event_handler.cpp
